R-NAV-1 Added rotating navigation

--- a/index.html
+++ b/index.html
@@ -12,10 +12,63 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Project Template</title>
+    <title>Rotating Navigation</title>
   </head>
   <body>
-      <h1>Start Project</h1>
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="closed">
+            <i class="fas fa-car-crash"></i>
+          </button>
+          <button id="open">
+            <i class="fas fa-car"></i>
+          </button>
+        </div>
+      </div>
+      <div class="content">
+        <h1>Dream car</h1>
+        <small>Ionut Rosan</small>
+        <p>
+          Now SUVs aren’t really my thing. I can appreciate their practicality,
+          ruggedness, and go-anywhere nature when equipped with the right setup,
+          but I’m more of a sports car person. But there’s one SUV that I’ve
+          always had a soft spot for, and that is Mercedes’s (DDAIF) uber truck
+          - the G-wagon.
+        </p>
+        <h3>Mercedes G63</h3>
+        <img
+          src="https://s.yimg.com/ny/api/res/1.2/fxNt16s_W3LRxiW7EGIw0g--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTY0MDtjZj13ZWJw/https://media-mbst-pub-ue1.s3.amazonaws.com/creatr-uploaded-images/2020-06/d813a450-b25d-11ea-bffb-a7ebacce4650"
+          alt="G63"
+        />
+        <p>
+          The 2020 Mercedes-Benz AMG G 63 here that we’re testing is powered by
+          a hand-built, AMG variant of Mercedes’ twin-turbo V8, here pushing out
+          a ludicrous 577hp and 627 lb-ft of torque at 2500 rpm. Even for a
+          truck that weighs over 5,000 lbs, this engine will make your head snap
+          back if you’re not careful with the accelerator. And the sound
+          emanating from the dual exhaust pipes shooting out underneath the
+          running boards — am I in an SUV or a Dodge Viper? It’s loud, but
+          sonorous and stirring; this is a Detroit muscle car via the autobahn
+          here. The Germans may be perfecting what it means to have a car sound
+          like pure American muscle.
+        </p>
+      </div>
+    </div>
+
+    <nav>
+      <ul>
+        <li>
+          <i class="fas fa-home">Home</i>
+        </li>
+        <li>
+          <i class="fas fa-user-alt">About</i>
+        </li>
+        <li>
+          <i class="fas fa-envelope">Contact</i>
+        </li>
+      </ul>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
